# deck-builder

./: .env.example  .gitignore  README.md  pyproject.toml
.braingrid/: README.md  project.json
.github/workflows/: ci.yml
config/: settings.yaml
data/: cards.json
docs/: REQ-5-build.md
memory-bank/: activeContext.md  consolidated_learnings.md  productContext.md  progress.md  projectbrief.md  raw_reflection_log.md  systemPatterns.md  techContext.md
src/tarot_deck_generator/: crew.py  models.py
src/tarot_deck_generator/config/: agents.yaml  tasks.yaml
tests/: test_crew_run.py  test_evaluation.py  test_image_generation.py
tmp_out/: style_bible.json
