[project]
name = "tarot-deck-generator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "crewai[tools]>=0.80.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "coveralls>=4.0.0",
]

[project.scripts]
tarot_deck_generator = "tarot_deck_generator.crew:run"
run_crew = "tarot_deck_generator.crew:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
